feat: generazione numeri casuali senza ripetizioni per posizionare le bombe

--- a/index.html
+++ b/index.html
@@ -37,12 +37,23 @@
         <h1>Campo minato</h1>
       </div>
       <form class="d-flex align-items-center gap-2">
-        <select
-          name=""
-          id="difficulty-level-input"
-          class="form-select fs-4"
-        ></select>
-        <div class="btn btn-primary fs-4" id="play-button">Play</div>
+        <div>
+          <label for="difficulty-level-input">Difficoltà</label>
+          <select
+            name=""
+            id="difficulty-level-input"
+            class="form-select fs-4"
+          ></select>
+        </div>
+        <div>
+          <label for="difficulty-bomb">Numero bombe</label>
+          <select
+            name=""
+            id="difficulty-bomb"
+            class="form-select fs-4"
+          ></select>
+        </div>
+        <div class="btn btn-primary fs-4 mt-4" id="play-button">Play</div>
       </form>
     </header>
     <main class="wrapper">
