fix: add padding to footer

--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
       </div>
     </main>
 
-    <footer class="d-flex align-items-center gap-2">
+    <footer class="d-flex align-items-center gap-2 px-4">
       <h3>Made with</h3>
       <i class="fa-solid fa-heart"></i>
       <h3>
